--- a/style.css
+++ b/style.css
@@ -137,3 +137,11 @@ header {
     padding: 1em;
     background-color: white;
 }
+
+
+@media screen and (max-width:450px) {
+    .books__list{
+        flex-direction: column;
+    }
+    
+}
